--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Ensure Cache Is Healthy
         if: runner.os != 'Windows' && steps.cache.outputs.cache-hit == 'true'
         run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-      - run: poetry install --extras docs -vv
+      - run: poetry install -vv
       - name: Run Build
         run: make build-pyinstaller-file
       - name: Upload Artifacts
@@ -105,7 +105,7 @@ jobs:
       - name: Ensure Cache Is Healthy
         if: runner.os != 'Windows' && steps.cache.outputs.cache-hit == 'true'
         run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-      - run: poetry install --extras docs -vv
+      - run: poetry install -vv
       - name: Run Build
         run: make build-pyinstaller-folder
       - name: Upload Artifacts
@@ -158,7 +158,7 @@ jobs:
       - name: Ensure Cache Is Healthy
         if: runner.os != 'Windows' && steps.cache.outputs.cache-hit == 'true'
         run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-      - run: poetry install --extras docs -vv
+      - run: poetry install -vv
       - name: Download Artifacts (macOS)
         uses: actions/download-artifact@v4
         with:
@@ -246,7 +246,7 @@ jobs:
       - name: Ensure Cache Is Healthy
         if: runner.os != 'Windows' && steps.cache.outputs.cache-hit == 'true'
         run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-      - run: poetry install --extras docs -vv
+      - run: poetry install -vv
       - name: Run Build
         run: make build
       - name: Upload Distribution Artifact
@@ -282,7 +282,7 @@ jobs:
       - name: Ensure Cache Is Healthy
         if: steps.cache.outputs.cache-hit == 'true'
         run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-      - run: poetry install --extras docs -vv
+      - run: poetry install -vv
       - run: make version
       - name: Publish Distribution 📦 to PyPI
         env:
@@ -349,7 +349,7 @@ jobs:
       - name: Ensure Cache Is Healthy
         if: runner.os != 'Windows' && steps.cache.outputs.cache-hit == 'true'
         run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-      - run: poetry install --extras docs -vv
+      - run: poetry install -vv
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
