--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "restructuredtext"
     ],
     "cSpell.enabled": true,
+    "esbonio.sphinx.buildDir": "${workspaceRoot}/docs/build",
+    "esbonio.sphinx.confDir": "${workspaceFolder}/docs/source",
     "explorerExclude.backup": null,
     "files.exclude": {
         "**/*.egg-info": true,
