Spell Check workflow trigger match CI/CD workflow trigger
the PR for this change is stuck waiting for the "Spell Check" workflow to run. this could be caused by the trigger only being defined for pushed events and this being from a fork where actions don't run.

--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -3,12 +3,14 @@ name: Spell Check
 # There is an official action published by cSpell.
 # v1.1.1 was tested but did not function as desired so we are using the CLI.
 
-on: push
-
+on:
+  pull_request:  # any pull request
+  push:
+    branches:
+      - master
 
 env:
   NODE_VERSION: '18'
-
 
 jobs:
   spell-check:
