--- a/runway/templates/k8s-cfn-repo/service-hello-world.k8s/base/deployment.yaml
+++ b/runway/templates/k8s-cfn-repo/service-hello-world.k8s/base/deployment.yaml
@@ -12,9 +12,7 @@ spec:
       containers:
         - name: the-container
           image: monopole/hello:1
-          command: ["/hello",
-                    "--port=8080",
-                    "--enableRiskyFeature=$(ENABLE_RISKY)"]
+          command: ["/hello", "--port=8080", "--enableRiskyFeature=$(ENABLE_RISKY)"]
           ports:
             - containerPort: 8080
           env:
