--- a/runway/templates/sls-py/package.json
+++ b/runway/templates/sls-py/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sampleapp",
-  "version": "1.0.0",
+  "author": "unused",
   "description": "Serverless Python app",
   "devDependencies": {
     "serverless": "^1.57.0",
     "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-python-requirements": "^5.0.1"
   },
-  "author": "unused",
-  "license": "unused"
+  "license": "unused",
+  "name": "sampleapp",
+  "version": "1.0.0"
 }
