--- a/infrastructure/public/common/bucket-and-user.cdk/package.json
+++ b/infrastructure/public/common/bucket-and-user.cdk/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "myapp",
-    "version": "1.0.0",
-    "scripts": {
-        "build": "tsc",
-        "lint": "tslint -c tslint.json 'bin/**/*.ts' 'lib/**/*.ts'",
-        "watch": "tsc -w",
-        "cdk": "cdk"
-    },
-    "devDependencies": {
-        "@types/node": "8.10.40",
-        "@types/source-map-support": "^0.5.0",
-        "aws-cdk": "^2.101.1",
-        "aws-sdk": "^2.1511.0",
-        "prompt": "^1.0.0",
-        "ts-node": "^8.1.0",
-        "tslint": "^5.20.0",
-        "typescript": "^3.3.3333"
-    },
-    "dependencies": {
-        "@aws-cdk/aws-iam": "^1.204.0",
-        "@aws-cdk/aws-s3": "^1.204.0",
-        "@aws-cdk/core": "^1.15.0",
-        "source-map-support": "^0.5.9"
-    }
+  "dependencies": {
+    "@aws-cdk/aws-iam": "^1.204.0",
+    "@aws-cdk/aws-s3": "^1.204.0",
+    "@aws-cdk/core": "^1.15.0",
+    "source-map-support": "^0.5.9"
+  },
+  "devDependencies": {
+    "@types/node": "8.10.40",
+    "@types/source-map-support": "^0.5.0",
+    "aws-cdk": "^2.101.1",
+    "aws-sdk": "^2.1511.0",
+    "prompt": "^1.0.0",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.20.0",
+    "typescript": "^3.3.3333"
+  },
+  "name": "myapp",
+  "scripts": {
+    "build": "tsc",
+    "cdk": "cdk",
+    "lint": "tslint -c tslint.json 'bin/**/*.ts' 'lib/**/*.ts'",
+    "watch": "tsc -w"
+  },
+  "version": "1.0.0"
 }
