--- a/runway/templates/cdk-tsc/package.json
+++ b/runway/templates/cdk-tsc/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "sampleapp",
-  "version": "0.1.0",
   "bin": {
     "newbase": "bin/sample.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@types/node": "^10.17.5",
-    "@types/source-map-support": "^0.5.0",
-    "typescript": "^3.3.3333",
-    "ts-node": "^8.1.0",
-    "aws-cdk": "^1.1.0"
   },
   "dependencies": {
     "@aws-cdk/core": "^1.1.0",
     "source-map-support": "^0.5.9"
-  }
+  },
+  "devDependencies": {
+    "@types/node": "^10.17.5",
+    "@types/source-map-support": "^0.5.0",
+    "aws-cdk": "^1.1.0",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.3.3333"
+  },
+  "name": "sampleapp",
+  "scripts": {
+    "build": "tsc",
+    "cdk": "cdk",
+    "watch": "tsc -w"
+  },
+  "version": "0.1.0"
 }
