--- a/runway/templates/static-react/sampleapp.web/public/manifest.json
+++ b/runway/templates/static-react/sampleapp.web/public/manifest.json
@@ -1,25 +1,25 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "background_color": "#ffffff",
+    "display": "standalone",
+    "icons": [
+        {
+            "sizes": "64x64 32x32 24x24 16x16",
+            "src": "favicon.ico",
+            "type": "image/x-icon"
+        },
+        {
+            "sizes": "192x192",
+            "src": "logo192.png",
+            "type": "image/png"
+        },
+        {
+            "sizes": "512x512",
+            "src": "logo512.png",
+            "type": "image/png"
+        }
+    ],
+    "name": "Create React App Sample",
+    "short_name": "React App",
+    "start_url": ".",
+    "theme_color": "#000000"
 }
