--- a/tests/unit/cfngin/fixtures/cfn_template.yaml
+++ b/tests/unit/cfngin/fixtures/cfn_template.yaml
@@ -10,10 +10,9 @@ Resources:
   Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName:
-        !Join
-          - "-"
-          - - !Ref "AWS::StackName"
+      BucketName: !Join
+        - "-"
+        -   - !Ref "AWS::StackName"
             - !Ref "AWS::Region"
   Dummy:
     Type: AWS::CloudFormation::WaitConditionHandle
