remove use of flake8

--- a/.github/scripts/urlshortener/Makefile
+++ b/.github/scripts/urlshortener/Makefile
@@ -1,10 +1,7 @@
 install:
 	@poetry install
 
-lint: lint-flake8 lint-pylint
-
-lint-flake8:
-	@poetry run flake8 update_urls.py
+lint: lint-pylint
 
 lint-pylint:
 	@poetry run pylint update_urls.py \
