--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,6 @@ wheel = "^0.42.0"
 yamllint = "*"
 
 [tool.poetry.group.dev.dependencies]
-black = ">=22.1"
 coverage = {extras = ["toml"], version = ">=6.3"}
 doc8 = ">=0.10"  # for linting with vscode rst extension
 dunamai = "^1.5"
@@ -93,6 +92,9 @@ sphinx-rtd-theme = "^1.0"
 sphinx-tabs = "^3.2"
 sphinxcontrib-apidoc = "^0.3"
 sphinxcontrib-programoutput = "^0.17"
+
+[tool.poetry.group.lint.dependencies]
+black = "^24.4.2"
 
 [tool.poetry.group.types.dependencies]
 mypy-boto3 = "^1.16"  # importable boto3 type annotations
