--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "scripts": {
+    "postinstall": "node ./postinstall.js",
+    "preuninstall": "node ./preuninstall.js"
   }
 }
